# leakcheck-api-ebac

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: router.py
app/api/routes/: email.py  health.py  name.py
app/clients/: leakcheck_client.py
app/core/: config.py
app/services/: leakcheck_service.py
